feat: add per-host firewall policies
