# backend/routes/main.js
@@ -15,6 +15,7 @@ import nginxAnalyticsRoutes from "./nginx/analytics.js";
 import certificatesHostsRoutes from "./nginx/certificates.js";
 import cloudflaredRoutes from "./nginx/cloudflared.js";
 import ddnsProvidersRoutes from "./nginx/ddns_providers.js";
+import firewallPoliciesRoutes from "./nginx/firewall_policies.js";
 import deadHostsRoutes from "./nginx/dead_hosts.js";
 import proxyHostsRoutes from "./nginx/proxy_hosts.js";
 import redirectionHostsRoutes from "./nginx/redirection_hosts.js";
@@ -68,6 +69,7 @@ router.use("/dashboard", dashboardRoutes);
 router.use("/chat", chatRoutes);
 router.use("/nginx/proxy-hosts", proxyHostsRoutes);
 router.use("/nginx/ddns-providers", ddnsProvidersRoutes);
+router.use("/nginx/firewall-policies", firewallPoliciesRoutes);
 router.use("/nginx/redirection-hosts", redirectionHostsRoutes);
 router.use("/nginx/dead-hosts", deadHostsRoutes);
 router.use("/nginx/streams", streamsRoutes);
